--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -128,3 +128,11 @@ input[type=checkbox]:checked~ul {
   // This line forces the browser to set the opacity to 1 after executing/finishing the animation
   opacity: 1;
 }
+
+.nav-btn-bar {
+  height: 4rem;
+}
+
+.nav-btn {
+  height: 4rem;
+}
