--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,18 +13,18 @@
 // You should have received a copy of the GNU General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-$gray: #777;
-$gray-bg: rgba(0,0,0,.025);
-$gray-text: #666;
-$menu-text: #bbb;
-$body-color: #333;
-$body-bg: #fff;
-$border-color: #ebebeb;
+// $gray: #777;
+// $gray-bg: rgba(0,0,0,.025);
+// $gray-text: #666;
+// $menu-text: #bbb;
+// $body-color: #333;
+// $body-bg: #fff;
+// $border-color: #ebebeb;
 
-// $gray: #ffff00;
-// $gray-bg: rgba(255,125,00,.5);
-// $gray-text: #0000ff;
-// $menu-text: #00ff00;
-// $body-color: #ff0000;
-// $body-bg: #ebede9;
-// $border-color: #ff7700;
+$gray: #777; //icons
+$gray-bg: rgba(0,0,0,.025); //cards
+$gray-text: #666; //????
+$menu-text: #bbb; //search bar icons and summary of cv
+$body-color: #333; //text color
+$body-bg: #fff; //background
+$border-color: #ebebeb; //division lines
