--- a/_sass/pooleparty/__inline__/_type.scss
+++ b/_sass/pooleparty/__inline__/_type.scss
@@ -101,7 +101,8 @@ body:not(.no-large-headings) {
 }
 
 h1, h2, h3, .h1, .h2, .h3 {
-  margin: 4rem 0 1rem;
+  //margin: 4rem 0 1rem;
+  margin: 2rem 0 1rem;
 }
 
 h4, h5, h6, .h4, .h5, .h6 {
