--- a/_sass/pro/_dark-mode.scss
+++ b/_sass/pro/_dark-mode.scss
@@ -5,8 +5,8 @@
 }
 
 @mixin dark-mode() {
-  //--body-color: #ccc;
-  --body-color: #F5EAEA;
+  --body-color: #ccc;
+  //--body-color: #F5EAEA;
   --body-bg: var(--dark-mode-body-bg);
   --border-color: var(--dark-mode-border-color);
   --gray: rgba(255,255,255,.5);
