--- a/assets/icomoon2/style.css
+++ b/assets/icomoon2/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?l5uvht');
-  src:  url('fonts/icomoon.eot?l5uvht#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?l5uvht') format('truetype'),
-    url('fonts/icomoon.woff?l5uvht') format('woff'),
-    url('fonts/icomoon.svg?l5uvht#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?dqpp5k');
+  src:  url('fonts/icomoon.eot?dqpp5k#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?dqpp5k') format('truetype'),
+    url('fonts/icomoon.woff?dqpp5k') format('woff'),
+    url('fonts/icomoon.svg?dqpp5k#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -105,6 +105,9 @@
 }
 .icon-linkedin:before {
   content: "\e1015";
+}
+.icon-linux:before {
+  content: "\e900";
 }
 .icon-microsoft:before {
   content: "\e1016";
